# 2025_23

./: README.md
application_client/: package-lock.json  package.json
application_client/src/api/: dbserver_endpoint_path.ts  endpoint.ts  llm_front_apiendpoint_path.ts
application_client/src/api/test/: local_test_path.ts
application_client/src/app/: layout.tsx  page.tsx
application_client/src/app/auth/login/: page.tsx  style.scss
application_client/src/app/auth/signup/: page.tsx  style.scss
application_client/src/app/comp/header/: header.tsx  style.module.scss
application_client/src/app/main/home/: page.tsx  style.scss
application_client/src/app/main/start/: layout.tsx  page.tsx  style.scss
application_client/src/app/test/: layout.tsx  page.tsx
application_client/src/function/: makesession_uuid.ts
application_client/src/global/auth/: jotai.ts
application_client/src/global/favorite/: jotai.ts
application_client/src/global/person/black/: string.ts
application_client/src/global/person/gold/: string.ts
application_client/src/global/person/green/: string.ts
application_client/src/global/person/pink/: string.ts
application_client/src/public/person/black/: 夜久野 怜狐 夕.jpg:Zone.Identifier  夜久野 怜狐 昼.png:Zone.Identifier  夜久野 怜狐 立ち絵.png:Zone.Identifier
application_client/src/public/person/gold/: 嵐山 小春  透過.png:Zone.Identifier  嵐山 小春 制服.jpg:Zone.Identifier  嵐山 小春 夜.jpg:Zone.Identifier  嵐山 小春 昼.jpg:Zone.Identifier  嵐山 小春 私服.jpg:Zone.Identifier  嵐山 小春 透過.png:Zone.Identifier
application_client/src/type/: loginIdType.tsx
back/: docker-compose.yaml
back/app/: .env  Dockerfile  package-lock.json  package.json  server.js
back/app/database/prisma/: schema.prisma
back/nginx/: default.conf
character prompt/: prompt 0.txt
character_prompt/: prompt 0.txt  prompt 1.txt  prompt 2.txt  prompt 3.txt
client/: package-lock.json  package.json
client/src/app/: page.tsx
client/src/app/auth/login/: page.tsx  style.scss
client/src/app/test/: page.tsx
client/src/comp/header/: header.tsx
client/src/global/auth/: jotai.ts
client/src/global/favorite/: jotai.ts
dbserver/: docker-compose.yaml  package-lock.json  package.json
dbserver/app/: .env  Dockerfile  package-lock.json  package.json  server.ts
dbserver/app/database/prisma/: schema.prisma
dbserver/app/test/: test_post_for_llmfront.ts
dbserver/nginx/: default.conf
llm-front/: .env  Cargo.toml  config.toml
llm-front/src/: main.rs
llm-next/: fastapi_server.py  init.bat  main.py  pyproject.toml  run.bat  sample.py  server.bat
llm-next/llm_next/: chat.py  db.py  embeddings.py  llm.py  llm_next.py  local_llm.py  prompt.py  sample2.py
llm-next/seed/: 0-init.sh
llm-next/src/llm_next/: sample2.py
キャラ設定/: 元ネタ.txt  小春 紹介文.txt  希愛 紹介文.txt  玲狐 紹介文.txt  瞳華 紹介文.txt
(+33 files in other folders)
