[package]
name = "llm-front"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
chrono = "0.4.39"
colog = "1.3.0"
crossterm = "0.28.1"
dialoguer = "0.11.0"
dotenvy = "0.15.7"
either = "1.13.0"
flate2 = "1.0.35"
indicatif = "0.17.11"
log = "0.4.26"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
rocket = { version = "0.5.1", features = ["json"] }
sbv2_core = { git = "https://github.com/aq2r/sbv2_core", features = [
    "dynamic",
    "cuda",
    "cuda_tf32",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serenity = "0.12.4"
songbird = { version = "0.4.6", features = ["builtin-queue"]}
sqlx = {version = "0.8.3", features = ["runtime-tokio", "sqlite"]}
symphonia = "0.5.4"
tar = "0.4.43"
thiserror = "2.0.11"
tokio = {version = "1.43.0", features = ["full"]}
toml = "0.8.20"
uuid = {version = "1.13.2", features = ["v4"]}
zip = "2.2.2"

