[project]
name = "llm-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=0.6.3",
    "cohere>=5.13.12",
    "langchain>=0.3.18",
    "langchain-community>=0.3.17",
    "langchain-postgres>=0.0.13",
    "llama-cpp-python>=0.3.7",
    "llama-index>=0.12.17",
    "llamacpp>=0.1.14",
    "logging>=0.4.9.6",
    "openai>=1.63.1",
    "psycopg2>=2.9.10",
    "sentence-transformers>=3.4.1",
]
